--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,7 @@
     "react": "16.1.1",
     "react-bootstrap": "0.31.5",
     "react-dom": "16.1.1",
+    "react-fontawesome": "^1.6.1",
     "react-scripts": "1.0.17"
   },
   "scripts": {
