--- a/server/build.gradle
+++ b/server/build.gradle
@@ -56,6 +56,8 @@ dependencies {
     testCompile "org.grails:grails-gorm-testing-support"
     testCompile "org.grails:grails-datastore-rest-client"
     testCompile "org.grails:grails-web-testing-support"
+
+    compile 'org.grails.plugins:gorm-logical-delete:2.0.0.BUILD-SNAPSHOT'
 }
 
 bootRun {
