--- a/client/package.json
+++ b/client/package.json
@@ -8,7 +8,7 @@
     "react-dom": "16.1.1",
     "react-fontawesome": "^1.6.1",
     "react-scripts": "1.0.17",
-    "react-router-dom":"4.2.2"
+    "react-hash-route":"1.0.10"
   },
   "scripts": {
     "start": "react-scripts start",
